<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="com.depromeet.android.childcare.model.PaymentType" />

        <variable
            name="viewModel"
            type="com.depromeet.android.childcare.addbook.AddItemViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="20dp"
                android:paddingEnd="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="42dp"
                    android:text="@string/add_item_where"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_add_where"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={viewModel.title}"
                        android:hint="@string/add_item_hint_where"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:theme="@style/TextAppearance.App.TextInputLayout" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/add_item_amount"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_add_amount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={viewModel.amount}"
                        android:hint="@string/add_item_hint_amount"
                        android:inputType="numberDecimal"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:theme="@style/TextAppearance.App.TextInputLayout" />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_item_date"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:text="@string/add_item_msg_no_date"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12sp" />
                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_add_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@{viewModel.date}"
                        android:onClick="@{() -> viewModel.onDateClick()}"
                        android:theme="@style/TextAppearance.App.TextInputLayout" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/add_item_method"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_add_card"
                        android:layout_width="80dp"
                        android:layout_height="32dp"
                        android:layout_marginEnd="12dp"
                        android:background="@{viewModel.method == PaymentType.CARD ? @drawable/btn_bg_round_blue : @drawable/btn_bg_round_gray}"
                        android:clickable="true"
                        android:focusable="true"
                        android:stateListAnimator="@null"
                        android:text="@string/add_item_card"
                        android:textColor="@android:color/white"
                        android:textSize="14sp"
                        android:onClick="@{() -> viewModel.onPaymentMethodClick(PaymentType.CARD)}"/>

                    <Button
                        android:id="@+id/btn_add_cash"
                        android:layout_width="80dp"
                        android:layout_height="32dp"
                        android:background="@{viewModel.method == PaymentType.CASH ? @drawable/btn_bg_round_blue : @drawable/btn_bg_round_gray}"
                        android:clickable="true"
                        android:focusable="true"
                        android:stateListAnimator="@null"
                        android:text="@string/add_item_cash"
                        android:textColor="@android:color/white"
                        android:textSize="14sp"
                        android:onClick="@{() -> viewModel.onPaymentMethodClick(PaymentType.CASH)}"/>
                </LinearLayout>

                <Button
                    android:id="@+id/btn_add_next"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:background="@drawable/btn_bg_round_orange"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:padding="17dp"
                    android:text="@string/add_item_next"
                    android:textColor="@android:color/white"
                    android:onClick="@{() -> viewModel.onNextClick()}"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</layout>