<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar_add_item" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="20dp"
                android:paddingEnd="20dp">

                <LinearLayout
                    android:id="@+id/layout_add_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/tv_add_category"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_item_category"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:text="@string/add_item_msg_no_date"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_add_category_btns"
                    android:layout_width="0dp"
                    android:layout_height="32dp"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/layout_add_category">

                    <Button
                        android:id="@+id/btn_add_category1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="4dp"
                        android:layout_weight="1"
                        android:background="@drawable/btn_bg_round_gray"
                        android:clickable="true"
                        android:focusable="true"
                        android:stateListAnimator="@null"
                        android:text="@string/add_item_cash"
                        android:textColor="@android:color/white"
                        android:textSize="14sp" />

                    <Button
                        android:id="@+id/btn_add_category2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="4dp"
                        android:layout_marginEnd="4dp"
                        android:layout_weight="1"
                        android:background="@drawable/btn_bg_round_gray"
                        android:clickable="true"
                        android:focusable="true"
                        android:stateListAnimator="@null"
                        android:text="@string/add_item_cash"
                        android:textColor="@android:color/white"
                        android:textSize="14sp" />

                    <Button
                        android:id="@+id/btn_add_category3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="4dp"
                        android:layout_marginEnd="4dp"
                        android:layout_weight="1"
                        android:background="@drawable/btn_bg_round_gray"
                        android:clickable="true"
                        android:focusable="true"
                        android:stateListAnimator="@null"
                        android:text="@string/add_item_cash"
                        android:textColor="@android:color/white"
                        android:textSize="14sp" />

                    <Button
                        android:id="@+id/btn_add_category4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="4dp"
                        android:layout_weight="1"
                        android:background="@drawable/btn_bg_round_gray"
                        android:clickable="true"
                        android:focusable="true"
                        android:stateListAnimator="@null"
                        android:text="@string/add_item_cash"
                        android:textColor="@android:color/white"
                        android:textSize="14sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_add_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/add_item_content"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/layout_add_category_btns" />

                <ImageView
                    android:id="@+id/iv_add_content"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/btn_et_round_gray"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_camera"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_add_content" />

                <EditText
                    android:id="@+id/et_add_content"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/btn_et_round_blue"
                    android:minHeight="70dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/iv_add_content"
                    app:layout_constraintTop_toBottomOf="@id/tv_add_content" />

                <Button
                    android:id="@+id/btn_add_finish"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:background="@drawable/btn_bg_round_orange"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:padding="17dp"
                    android:text="@string/add_item_finish"
                    android:textColor="@android:color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/iv_add_content" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</layout>